--- a/component.html
+++ b/component.html
@@ -35,7 +35,7 @@
         <div class="side-div">
           <h2>Get Started</h2>
           <ul class="comp-list">
-            <li><a class="link" href="">Introduction</a></li>
+            <li><a class="link" href="#intro">Introduction</a></li>
             <li><a class="link" href="">Typography</a></li>
             <li><a class="link" href="">Color</a></li>
             <li><a class="link" href="">Nothing</a></li>
@@ -44,7 +44,7 @@
         <div class="side-div">
           <h2>Compoenents</h2>
           <ul class="comp-list">
-            <li><a class="link" href="">Avatar</a></li>
+            <li><a class="link" href="#sample">Avatar</a></li>
             <li><a class="link" href="">Alert</a></li>
             <li><a class="link" href="">Badge</a></li>
             <li><a class="link" href="">Button</a></li>
@@ -55,7 +55,7 @@
         </div>
       </section>
       <section class="comp-docs">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae neque
+        <h1 id="intro">Intro</h1>
         laudantium maxime mollitia aliquid magni fugit dolorum aspernatur
         possimus optio illum magnam non consequuntur suscipit quibusdam sequi
         eos porro nihil, delectus unde inventore facere quod nemo. Ex fugit
@@ -135,7 +135,9 @@
         mollitia. Assumenda fuga cupiditate voluptatibus magni quis, neque
         molestias enim at iste sit hic maxime dolorem officiis porro aperiam
         dolor officia a optio quasi saepe rerum facilis voluptates minima!
-        Reprehenderit molestias incidunt nemo autem. Eaque autem atque minima
+        <div id="sample">
+          <h1>sampl</h1>
+        </div>
         adipisci totam. Vero unde quisquam ab voluptatum tenetur omnis tempora
         nemo voluptates ut laborum numquam, maiores repudiandae perferendis ea
         incidunt voluptatem, adipisci rerum fuga deleniti odio explicabo rem
