Avatar added to component lib

--- a/component.html
+++ b/component.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/navbar.css" />
     <link rel="stylesheet" href="./styles/hero.css" />
+    <link rel="stylesheet" href="./components.css" />
   </head>
   <body>
     <header class="nav-container">
@@ -55,118 +56,141 @@
         </div>
       </section>
       <section class="comp-docs">
-        <h1 id="intro">Intro</h1>
-        laudantium maxime mollitia aliquid magni fugit dolorum aspernatur
-        possimus optio illum magnam non consequuntur suscipit quibusdam sequi
-        eos porro nihil, delectus unde inventore facere quod nemo. Ex fugit
-        officia id consequuntur aperiam totam earum molestiae ipsam veritatis
-        molestias, modi quasi. Velit, odit omnis unde minus quibusdam
-        consequuntur porro aspernatur dolor obcaecati hic eos eaque repudiandae
-        minima eveniet, ad rerum. Voluptatum expedita similique libero culpa,
-        nulla suscipit omnis. Repellendus atque numquam ad nisi sed, beatae
-        dicta consequatur laboriosam maxime, doloribus vel architecto
-        perspiciatis, quis praesentium suscipit recusandae tempora ipsa sit
-        ullam! Repellendus hic soluta temporibus incidunt. Dolorum, excepturi ut
-        commodi neque architecto quam quisquam amet voluptates corrupti
-        molestiae quod odio dicta fugiat deserunt accusamus similique veritatis
-        natus recusandae velit officiis iusto, ratione veniam aperiam ipsam?
-        Dolorum reiciendis quas excepturi, voluptatem ipsum consequuntur libero
-        consequatur aliquid. Illum corporis perspiciatis fugit consequatur ex
-        eius quibusdam iure quam corrupti repudiandae quos numquam explicabo
-        error aliquam nulla recusandae maxime totam voluptatem, eligendi
-        doloremque quaerat aperiam qui deleniti? Tempora, exercitationem atque
-        ex sequi reiciendis quo esse perferendis ipsam, necessitatibus dicta
-        expedita minus dolorem natus ratione porro mollitia laudantium quaerat
-        iusto! Accusantium aut sed architecto a necessitatibus. Animi odio natus
-        magnam et rerum possimus quasi unde sed deleniti nihil sint, officia
-        facere voluptatem libero doloremque aliquam, consequatur autem ipsum
-        reiciendis? Alias eius maiores mollitia officiis totam dignissimos dolor
-        ipsam dolore accusantium aspernatur libero dicta quae debitis sunt velit
-        voluptates in dolorum sed, provident nesciunt culpa ratione expedita
-        illo amet. Dignissimos at, non nobis quis ex reprehenderit aspernatur
-        illum esse facere. Possimus, inventore non! Nemo commodi beatae magnam
-        perferendis, omnis et, cum repudiandae, nulla illum enim nisi voluptatum
-        autem corporis labore tempore necessitatibus. Omnis error sequi
-        voluptate. Excepturi tempore veritatis ut, officia optio, quibusdam qui
-        dolores molestias, ab quod cum temporibus dignissimos fugit quas
-        doloribus quos suscipit id amet accusantium et praesentium! Doloremque,
-        temporibus labore optio voluptatem eos obcaecati corporis suscipit
-        cupiditate soluta explicabo in enim esse libero provident nihil sequi
-        quisquam eum voluptatum blanditiis! Delectus ea facilis tempore ad,
-        mollitia nulla ratione temporibus voluptatibus iusto sapiente quis modi
-        vitae placeat molestiae veniam recusandae explicabo praesentium numquam
-        ipsa. Dolore beatae incidunt modi ratione accusamus illo, ab vero cum
-        aperiam id voluptas minus iste veniam animi? Nobis tempore est nisi
-        nesciunt! Molestiae illum reiciendis autem explicabo! Consequatur sint
-        nemo minima, illum rem alias ipsum, beatae vero id necessitatibus nisi
-        quasi. Temporibus voluptatem, enim veniam iusto ad molestiae. Officiis,
-        alias vero iusto minus non iste harum recusandae omnis expedita et error
-        delectus nostrum veniam odio modi doloribus amet inventore repellendus
-        facere odit accusantium! Odit nesciunt ipsam veniam qui ut obcaecati
-        minus, harum dolores et quidem quam amet, consequatur quis, id nulla quo
-        fugiat exercitationem iste. Soluta tenetur eaque nostrum delectus
-        doloribus necessitatibus eveniet accusantium expedita et, sequi, a
-        aspernatur deleniti est? Cumque quia dolorem in qui quisquam magni
-        inventore nam iusto, architecto libero voluptatibus vel adipisci
-        provident impedit voluptates similique repellendus id. Qui, quod. Ut est
-        veniam eius voluptatum neque recusandae sit consequuntur eos dicta ab
-        doloremque, cupiditate temporibus aperiam! Consequuntur earum cumque aut
-        veniam aliquid fuga rerum porro molestias nesciunt. Sit aspernatur
-        deleniti fuga, eaque ratione enim incidunt adipisci at doloribus
-        excepturi amet impedit obcaecati. In saepe eos, sequi ipsam tempore
-        adipisci non totam. Voluptatibus doloremque corporis rerum similique id.
-        Distinctio magni nihil atque enim exercitationem at aspernatur
-        laudantium incidunt veritatis earum, aperiam autem perferendis beatae ad
-        ducimus maxime unde neque doloribus eaque inventore reprehenderit. Autem
-        ea mollitia quod, nam consequuntur reprehenderit quam officiis dolores
-        temporibus? Et, mollitia. Officia, blanditiis ea. Beatae laboriosam id
-        harum molestiae. Vel saepe rem unde deleniti corporis ipsam officia
-        provident porro, optio esse aspernatur asperiores iusto eius, excepturi
-        minus. Ducimus enim quisquam dolorum quas. Alias excepturi tenetur
-        veniam repellat nulla aut dignissimos, nisi sunt suscipit doloremque
-        ipsa aspernatur perspiciatis natus modi sed exercitationem nihil
-        necessitatibus assumenda. Deleniti, minima eius. Eligendi asperiores,
-        mollitia qui dolorum doloremque nulla minima est nobis saepe accusantium
-        laudantium tempora. Soluta ducimus deleniti veritatis fugiat,
-        perspiciatis asperiores beatae quidem ut dicta reiciendis et, modi
-        dignissimos debitis, nulla blanditiis harum sapiente assumenda
-        recusandae! Autem reprehenderit consectetur repudiandae ut dolores ex
-        illo possimus delectus nulla, iure voluptatum perferendis minus
-        mollitia. Assumenda fuga cupiditate voluptatibus magni quis, neque
-        molestias enim at iste sit hic maxime dolorem officiis porro aperiam
-        dolor officia a optio quasi saepe rerum facilis voluptates minima!
-        <div id="sample">
-          <h1>sampl</h1>
-        </div>
-        adipisci totam. Vero unde quisquam ab voluptatum tenetur omnis tempora
-        nemo voluptates ut laborum numquam, maiores repudiandae perferendis ea
-        incidunt voluptatem, adipisci rerum fuga deleniti odio explicabo rem
-        eos. Facere laboriosam deserunt rem nobis minus sunt quaerat recusandae,
-        vel voluptatem illo autem delectus quas inventore aliquid possimus
-        accusamus magnam mollitia unde accusantium incidunt soluta totam iste
-        eaque. Temporibus dolorum mollitia veniam eius quis ad eligendi in natus
-        enim repellendus cupiditate ullam, dolorem a blanditiis suscipit
-        veritatis iure ab pariatur ipsam distinctio dolore dicta quos! Tempore
-        molestias culpa distinctio quos autem quaerat, quod voluptatum sapiente
-        reprehenderit veniam numquam incidunt repellendus ut labore quisquam
-        iure quo alias accusamus error repudiandae impedit esse voluptas quae
-        adipisci! Laboriosam maiores facere, modi, voluptatum dolores fugit ex,
-        itaque atque recusandae saepe unde magni quasi tenetur? Iusto saepe
-        beatae non accusantium, quo atque corrupti nihil, alias commodi nisi
-        molestias illo eaque sapiente ipsa odio adipisci sunt soluta, laboriosam
-        tenetur ipsam quod ex? Explicabo magni itaque, distinctio perferendis
-        minima quod fugit nesciunt praesentium beatae molestiae qui, ratione
-        nostrum neque enim amet? Nisi ratione eveniet possimus, deserunt
-        perspiciatis dicta ab? Aperiam modi totam illum tempora architecto eius
-        harum, ipsam sunt magni quae soluta, sed atque obcaecati, cupiditate
-        veritatis sapiente doloremque voluptatum eum suscipit error! Dolorum
-        repellendus voluptatum exercitationem expedita error laboriosam tempore
-        excepturi, eos dicta, aspernatur cum amet architecto, rerum iure? Omnis,
-        laborum odio natus commodi quasi ab sit a dolore praesentium aliquid
-        deserunt tenetur exercitationem molestias. Culpa voluptates omnis harum
-        alias. Quasi molestias voluptate eligendi nihil, vel eos officiis
-        consequuntur eius quibusdam reiciendis aut doloribus sapiente doloremque
-        itaque neque labore enim, eveniet consectetur non.
+        <section class="comp-conatainer">
+          <div class="comp">
+            <h2 class="comp-title">Avatar</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quae
+              hic quibusdam repudiandae consequatur quas sit, labore, ad porro
+              quia ducimus dignissimos a?
+            </p>
+          </div>
+          <div class="comp-type">
+            <h2 class="comp-title">Round Avatar</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quae
+              hic quibusdam repudiandae consequatur quas sit, labore, ad porro
+              quia ducimus dignissimos a?
+            </p>
+            <div class="comp-demo">
+              <img
+                class="ct-round ct-sm"
+                src="./assests/images/pic1.jpg"
+                alt=""
+              />
+              <img
+                class="ct-round ct-sm"
+                src="./assests/images/pic2.jpg"
+                alt=""
+              />
+              <img
+                class="ct-round ct-sm"
+                src="./assests/images/pic3.jpg"
+                alt=""
+              />
+              <img
+                class="ct-round ct-sm"
+                src="./assests/images/pic4.jpg"
+                alt=""
+              />
+            </div>
+            <div class="comp-code">
+              <iframe
+                src="https://carbon.now.sh/embed?bg=rgba%2834%2C40%2C49%2C1%29&t=one-dark&wt=sharp&l=htmlmixed&width=680&ds=true&dsyoff=0px&dsblur=0px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Inconsolata&fs=18px&lh=180%25&si=false&es=2x&wm=false&code=%253Cimg%2520class%253D%2522ct-round%2520ct-sm%2522%2520src%253D%2522image-url%2522%2520alt%253D%2522%2522%2520%252F%253E%250A%253Cimg%2520class%253D%2522ct-round%2520ct-sm%2522%2520src%253D%2522image-url%2522%2520alt%253D%2522%2522%2520%252F%253E%2520%2520%250A"
+              >
+              </iframe>
+            </div>
+          </div>
+          <div class="comp-type">
+            <h2 class="comp-title">Round Avatar Sizes</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quae
+              hic quibusdam repudiandae consequatur quas sit, labore, ad porro
+              quia ducimus dignissimos a?
+            </p>
+            <div class="comp-demo">
+              <img
+                class="ct-round ct-sm"
+                src="./assests/images/pic1.jpg"
+                alt=""
+              />
+              <img
+                class="ct-round ct-md"
+                src="./assests/images/pic2.jpg"
+                alt=""
+              />
+              <img
+                class="ct-round ct-lg"
+                src="./assests/images/pic3.jpg"
+                alt=""
+              />
+              <img
+                class="ct-round ct-xlg"
+                src="./assests/images/pic4.jpg"
+                alt=""
+              />
+            </div>
+            <div class="comp-code">
+              <iframe
+                src="https://carbon.now.sh/embed?bg=rgba%2834%2C40%2C49%2C1%29&t=one-dark&wt=sharp&l=htmlmixed&width=680&ds=true&dsyoff=0px&dsblur=0px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Inconsolata&fs=18px&lh=180%25&si=false&es=2x&wm=false&code=%253Cimg%2520class%253D%2522ct-round%2520ct-sm%2522%2520src%253D%2522image-url%2522%2520alt%253D%2522%2522%2520%252F%253E%250A%253Cimg%2520class%253D%2522ct-round%2520ct-md%2522%2520src%253D%2522image-url%2522%2520alt%253D%2522%2522%2520%252F%253E%250A%253Cimg%2520class%253D%2522ct-round%2520ct-lg%2522%2520src%253D%2522image-url%2522%2520alt%253D%2522%2522%2520%252F%253E%250A%253Cimg%2520class%253D%2522ct-round%2520ct-xlg%2522%2520src%253D%2522image-url%2522%2520alt%253D%2522%2522%2520%252F%253E%2520%2520%2520%250A"
+                style="
+                  width: 100%;
+                  height: 219px;
+                  border: 0;
+                  transform: scale(1);
+                  overflow: hidden;
+                "
+                sandbox="allow-scripts allow-same-origin"
+              >
+              </iframe>
+            </div>
+          </div>
+
+          <div class="comp-type">
+            <h2 class="comp-title">Squared Avatar</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quae
+              hic quibusdam repudiandae consequatur quas sit, labore, ad porro
+              quia ducimus dignissimos a?
+            </p>
+            <div class="comp-demo">
+              <img
+                class="ct-square ct-sm"
+                src="./assests/images/pic1.jpg"
+                alt=""
+              />
+              <img
+                class="ct-square ct-md"
+                src="./assests/images/pic2.jpg"
+                alt=""
+              />
+              <img
+                class="ct-square ct-lg"
+                src="./assests/images/pic3.jpg"
+                alt=""
+              />
+              <img
+                class="ct-square ct-xlg"
+                src="./assests/images/pic4.jpg"
+                alt=""
+              />
+            </div>
+            <div class="comp-code">
+              <iframe
+                src="https://carbon.now.sh/embed?bg=rgba%2834%2C40%2C49%2C1%29&t=one-dark&wt=sharp&l=htmlmixed&width=680&ds=true&dsyoff=0px&dsblur=0px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Inconsolata&fs=18px&lh=180%25&si=false&es=2x&wm=false&code=%253Cimg%2520class%253D%2522ct-square%2520ct-sm%2522%2520src%253D%2522image-url%2522%2520alt%253D%2522%2522%2520%252F%253E%250A%253Cimg%2520class%253D%2522ct-square%2520ct-md%2522%2520src%253D%2522image-url%2522%2520alt%253D%2522%2522%2520%252F%253E%250A%253Cimg%2520class%253D%2522ct-square%2520ct-lg%2522%2520src%253D%2522image-url%2522%2520alt%253D%2522%2522%2520%252F%253E%250A%253Cimg%2520class%253D%2522ct-square%2520ct-xlg%2522%2520src%253D%2522image-url%2522%2520alt%253D%2522%2522%2520%252F%253E%2520%2520%2520%250A"
+                style="
+                  width: 100%;
+                  height: 219px;
+                  border: 0;
+                  transform: scale(1);
+                  overflow: hidden;
+                "
+                sandbox="allow-scripts allow-same-origin"
+              >
+              </iframe>
+            </div>
+          </div>
+        </section>
       </section>
     </main>
 
