update avatar lil bit

--- a/component.html
+++ b/component.html
@@ -45,7 +45,7 @@
         <div class="side-div">
           <h2>Compoenents</h2>
           <ul class="comp-list">
-            <li><a class="link" href="#sample">Avatar</a></li>
+            <li><a class="link" href="#avatar">Avatar</a></li>
             <li><a class="link" href="">Alert</a></li>
             <li><a class="link" href="">Badge</a></li>
             <li><a class="link" href="">Button</a></li>
@@ -57,8 +57,8 @@
       </section>
       <section class="comp-docs">
         <section class="comp-conatainer">
-          <div class="comp">
-            <h2 class="comp-title">Avatar</h2>
+          <div class="comp-type">
+            <h2 class="comp-title" id="avatar">Avatar</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quae
               hic quibusdam repudiandae consequatur quas sit, labore, ad porro
