--- a/index.html
+++ b/index.html
@@ -15,9 +15,16 @@
         <span class="nav-logo">CrystalUi</span>
         <div class="nav-div">
           <ul class="nav-links">
-            <li><a href="#" class="link">Docs</a></li>
+            <li><a href="/component.html" class="link">Docs</a></li>
             <li><a href="#" class="link">Examples</a></li>
-            <li><a href="#" class="link">GitHub</a></li>
+            <li>
+              <a
+                href="https://github.com/MiheerTamkhane/CrystalUi/tree/main"
+                class="link"
+                target="_blank"
+                >GitHub</a
+              >
+            </li>
           </ul>
           <div class="dark-light">
             <span class="material-icons sun">wb_sunny</span>
