style some comps

--- a/component.html
+++ b/component.html
@@ -25,6 +25,12 @@
             <span class="material-icons moon">dark_mode</span>
           </div>
           <div class="hamburger-div">
+            <a
+              href="https://github.com/MiheerTamkhane/CrystalUi/tree/main"
+              target="_blank"
+            >
+              <img src="./assests/svg/github.svg" alt="GitHub" />
+            </a>
             <span class="material-icons hamburger"> menu </span>
           </div>
         </div>
