--- a/component.html
+++ b/component.html
@@ -49,7 +49,7 @@
           </ul>
         </div>
         <div class="side-div">
-          <h2>Compoenents</h2>
+          <h2>Components</h2>
           <ul class="comp-list">
             <li><a class="link" href="#avatar">Avatar</a></li>
             <li><a class="link" href="#alert">Alert</a></li>
