add image comp in CL

--- a/component.html
+++ b/component.html
@@ -56,8 +56,8 @@
             <li><a class="link" href="#badge">Badge</a></li>
             <li><a class="link" href="#button">Button</a></li>
             <li><a class="link" href="#input">Input</a></li>
-            <li><a class="link" href="">Image</a></li>
-            <li><a class="link" href="">Card</a></li>
+            <li><a class="link" href="#image">Image</a></li>
+            <li><a class="link" href="#card">Card</a></li>
           </ul>
         </div>
       </section>
@@ -834,6 +834,129 @@
                 style="
                   width: 100%;
                   height: 475px;
+                  border: 0;
+                  transform: scale(1);
+                  overflow: hidden;
+                "
+                sandbox="allow-scripts allow-same-origin"
+              >
+              </iframe>
+            </div>
+          </div>
+        </section>
+
+        <section class="comp-container">
+          <div class="comp-type">
+            <h2 class="comp-title" id="image">Image</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
+              quia, inventore delectus ipsum possimus neque eaque odit.
+            </p>
+          </div>
+
+          <div class="comp-type">
+            <h2 class="comp-title">Image in size</h2>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Necessitatibus voluptatum aperiam provident?
+            </p>
+
+            <div class="comp-demo">
+              <img
+                src="./assests/images/fish.jpg"
+                alt="fish"
+                class="ct-img-sm"
+              />
+              <img
+                src="./assests/images/fish.jpg"
+                alt="fish"
+                class="ct-img-md"
+              />
+              <img
+                src="./assests/images/fish.jpg"
+                alt="fish"
+                class="ct-img-lg"
+              />
+            </div>
+
+            <div class="comp-demo">
+              <iframe
+                src="https://carbon.now.sh/embed?bg=rgba%2834%2C40%2C49%2C1%29&t=one-dark&wt=sharp&l=htmlmixed&width=444&ds=true&dsyoff=0px&dsblur=0px&wc=true&wa=false&pv=0px&ph=0px&ln=false&fl=1&fm=Inconsolata&fs=11.5px&lh=180%25&si=false&es=2x&wm=false&code=%253Cimg%2520src%253D%2522image-url%2522%2520alt%253D%2522fish%2522%2520class%253D%2522ct-img-sm%2522%2520%252F%253E%250A%253Cimg%2520src%253D%2522image-url%2522%2520alt%253D%2522fish%2522%2520class%253D%2522ct-img-md%2522%2520%252F%253E%250A%253Cimg%2520src%253D%2522image-url%2522%2520alt%253D%2522fish%2522%2520class%253D%2522ct-img-lg%2522%2520%252F%253E%250A"
+                style="
+                  width: 100%;
+                  height: 144px;
+                  border: 0;
+                  transform: scale(1);
+                  overflow: hidden;
+                "
+                sandbox="allow-scripts allow-same-origin"
+              >
+              </iframe>
+            </div>
+          </div>
+
+          <div class="comp-type">
+            <h2 class="comp-title">Round image</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
+            </p>
+
+            <div class="comp-demo">
+              <img
+                src="./assests/images/fish.jpg"
+                alt="fish"
+                class="ct-img-round ct-img-sm"
+              />
+              <img
+                src="./assests/images/fish.jpg"
+                alt="fish"
+                class="ct-img-round ct-img-md"
+              />
+              <img
+                src="./assests/images/fish.jpg"
+                alt="fish"
+                class="ct-img-round ct-img-lg"
+              />
+            </div>
+
+            <div class="comp-code">
+              <iframe
+                src="https://carbon.now.sh/embed?bg=rgba%2834%2C40%2C49%2C1%29&t=one-dark&wt=sharp&l=htmlmixed&width=414&ds=true&dsyoff=0px&dsblur=0px&wc=true&wa=false&pv=0px&ph=0px&ln=false&fl=1&fm=Inconsolata&fs=11.5px&lh=180%25&si=false&es=2x&wm=false&code=%253Cimg%2520src%253D%2522image-url%2522%2520alt%253D%2522fish%2522%2520class%253D%2522ct-img-round%2520ct-img-sm%2522%2520%252F%253E%250A%253Cimg%2520src%253D%2522image-url%2522%2520alt%253D%2522fish%2522%2520class%253D%2522ct-img-round%2520ct-img-md%2522%2520%252F%253E%250A%253Cimg%2520src%253D%2522image-url%2522%2520alt%253D%2522fish%2522%2520class%253D%2522ct-img-round%2520ct-img-lg%2522%2520%252F%253E%250A"
+                style="
+                  width: 100%;
+                  height: 144px;
+                  border: 0;
+                  transform: scale(1);
+                  overflow: hidden;
+                "
+                sandbox="allow-scripts allow-same-origin"
+              >
+              </iframe>
+            </div>
+          </div>
+
+          <div class="comp-type">
+            <h2 class="comp-title">Responsive image</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus.
+            </p>
+
+            <div class="comp-demo">
+              <div class="ct-landing-div">
+                <img
+                  src="./assests/images/fish.jpg"
+                  alt="fish"
+                  class="ct-img"
+                />
+              </div>
+            </div>
+
+            <div class="comp-code">
+              <iframe
+                src="https://carbon.now.sh/embed?bg=rgba%2834%2C40%2C49%2C1%29&t=one-dark&wt=sharp&l=htmlmixed&width=434&ds=true&dsyoff=0px&dsblur=0px&wc=true&wa=false&pv=0px&ph=0px&ln=false&fl=1&fm=Inconsolata&fs=11.5px&lh=180%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522ct-landing-div%2522%253E%2520%250A%2520%2520%253Cimg%2520src%253D%2522.%252Fassests%252Fimages%252Ffish.jpg%2522%2520alt%253D%2522fish%2522%2520%2520class%253D%2522ct-img%2522%2520%252F%253E%250A%253C%252Fdiv%253E%250A"
+                style="
+                  width: 100%;
+                  height: 144px;
                   border: 0;
                   transform: scale(1);
                   overflow: hidden;
